argocd/ingress.yaml
---
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.efym.net`)
      kind: Rule
      middlewares:
        - name: authelia
      services:
        - name: argocd
          port: 80
  tls:
    secretName: efym-net-tls
